# SLAE4sem

./: CMakeLists.txt
src/: CMakeLists.txt
src/SLAE/: SlaeBaseException.cpp  SlaeBaseException.hpp
src/SLAE/Matrix/: DenseMatrix.hpp  ThreeDiagonalMatrix.cpp  ThreeDiagonalMatrix.hpp
src/SLAE/Solvers/: GaussClassic.hpp  GaussSeidel.hpp  Jacobi.hpp  SimpleIteration.hpp  ThreeDiagonalMatrixSolver.cpp  ThreeDiagonalMatrixSolver.hpp
src/SLAE/Sparse/: CSR.hpp
src/SLAE/Utility/: Consts.hpp  Norm.hpp  Number.hpp  Overloads.hpp  Triplet.hpp
src/my_project/Matrix/: ThreeDiagonalMatrix.cpp  ThreeDiagonalMatrix.hpp
src/my_project/Solvers/: ThreeDiagonalMatrixSolver.cpp  ThreeDiagonalMatrixSolver.hpp
tests/: CMakeLists.txt  test_csr.cpp  test_dense.cpp  test_exception.cpp  test_gauss.cpp  test_iteration_solvers.cpp  test_progonka.cpp
